Fixes #2197: Misalignment in the modal card page issue fixed

--- a/client/css/custom.less
+++ b/client/css/custom.less
@@ -2296,6 +2296,7 @@ footer, header, .dashboard-header {
 }
 ul.card_activitiesnew{
 	li.activity-github-styles{
+		margin-left: 12px;
 		> .media{
 			display: flex;
 			overflow: visible;
